--- a/main.ipynb
+++ b/main.ipynb
@@ -42,6 +42,7 @@
     "### Equaiton\n",
     "\n",
     "$$\n",
+    "\\begin{gather*}\n",
     "C_{\\rm{D}} = C_{\\rm{d,C}} \\frac{f_{Kn}}{1+Br^{\\eta}} + C_{\\rm{d,FM}} \\frac{Br^{\\eta}}{1+Br^{\\eta}}\\\\\n",
     "\n",
     "C_{\\rm{d,C}}=C_1(1-\\alpha U^*)+C_0 {C_2}^2 \\Theta\\\\\n",
@@ -77,7 +78,7 @@
     "+\\frac{(4s^4+4s^2-1){\\rm{erf}}(s)}{2s^4}\n",
     "+\\frac{2\\sqrt{\\pi}}{3s}\\\\\n",
     "s=M\\sqrt{\\frac{\\gamma}{2}}\\\\\n",
-    "\n",
+    "\\end{gather*}\n",
     "$$\n",
     "\n",
     "## Constant(?)\n",
