minor update (equation)

--- a/main.ipynb
+++ b/main.ipynb
@@ -166,9 +166,11 @@
     "\n",
     "### Equation\n",
     "$$\n",
+    "\\begin{gather*}\n",
     "C_{D}=\\frac{24}{CcRe}\\\\\n",
     "Cc=1+Kn\\left[2.514+0.8\\exp{\\frac{-0.55}{Kn}}\\right]\\\\\n",
     "Kn=\\frac{M}{Re}\\sqrt{\\frac{\\gamma \\pi}{2}}\n",
+    "\\end{gather*}\n",
     "$$"
    ]
   },
